--- a/RealTimeProject/Views/Shared/_Layout.cshtml
+++ b/RealTimeProject/Views/Shared/_Layout.cshtml
@@ -39,8 +39,14 @@
                             </ul>
                            
                         </li>
+
                        
-                         
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Cart" asp-action="Index">
+                                    <i class="bi bi-cart"></i>(0)
+                                </a>
+                            </li>
+                                                 
                        
                        
                     </ul>
