--- a/RealTimeProject/Views/Cart/Index.cshtml
+++ b/RealTimeProject/Views/Cart/Index.cshtml
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-md-10 offset-md-1">
 
-                    @foreach (var item in Model.shoppingCartList)
+                    @foreach (var item in Model.ShoppingCartList)
                     {
                         <div class="row border-bottom pb-3">
                             <div class="d-none d-lg-block col-lg-1 text-center py-2">
@@ -77,7 +77,7 @@
                         <ul class="list-group mb-4">
                             <li class="d-flex justify-content-between align-items-center">
                                 <h5 class="text-dark fw-semibold text-uppercase"> Total (USD)</h5>
-                                <h4 class="text-dark fw-bolder">@Model.orderHeader.OrderTotal.ToString("c")</h4>
+                                <h4 class="text-dark fw-bolder">@Model.OrderHeader.OrderTotal.ToString("c")</h4>
                             </li>
                         </ul>
                     </div>
