--- a/RealTimeProject/Views/Shared/_Layout.cshtml
+++ b/RealTimeProject/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RealTimeProject.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.datatables.net/2.2.1/css/dataTables.dataTables.css" />  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 </head>
 <body>
@@ -45,7 +46,7 @@
                         
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="Cart" asp-action="Index">
-                                    <i class="bi bi-cart"></i>(0)
+                                    <i class="bi bi-cart"></i>
                                 </a>
                             </li>
                                            
